# LittleAgent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
app/graph/: abstract_graph.py  adaptive_rag.py  base_graph.py  collaboration_agent.py  humanin_agent.py  learning_graph.py  long_doc_graph.py  research_agent.py  search_agent.py  smart_scraper_graph.py
app/node/: agent_base.py  editor_node.py  interviewer_node.py  prompt_base.py  research_writer_node.py  structure_node.py  temp.py  tools_use_agent.py  writer_node.py
app/nodes/: conditional_node.py  db_fetch_ndoe.py  reader_node.py  storage_node.py  summary_node.py
app/old_graph/: abstract_graph.py  base_graph.py  learning_graph.py  smart_scraper_graph.py
app/old_nodes/: base_node.py  conditional_node.py  db_fetch_ndoe.py  reader_node.py  storage_node.py  summary_node.py
app/tools/: normal_tools.py
app/tools/loader/: file_loader.py  reader_loader.py
app/tools/models/: deepseek.py  glm.py  model_tokens.py  openai_embeder.py  openai_model.py  select_llms.py  spark_model.py
app/tools/storage/: paradeDB.py  paradesql.sql  pg_controller.py
app/tools/utils/: oss_upload.py  pdf_parse.py
graph/: test.ipynb
pages/: circle_rag.py  doc_manage.py  tool_use.py  url_load.py
scripts/: paradesql.sql
