[tool.poetry]
name = "littleagent"
version = "0.1.0"
description = ""
authors = ["blurrrryface <hl852456098@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
tqdm = "^4.66.4"
streamlit = "^1.34.0"
streamlit-extras = "^0.4.2"
nbconvert = "^7.16.4"
python-dotenv = "^1.0.1"
sqlglot = "^25.1.0"
websocket-client = "^1.8.0"
numexpr = "^2.10.0"
langchain-openai = "^0.1.7"
psycopg2-binary = "^2.9.9"
langchainhub = "^0.1.16"
langgraph = "^0.0.69"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
jupyter = "^1.0.0"
tavily-python = "^0.3.3"
langchain-postgres = "^0.0.7"
langchain-experimental = "^0.0.61"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
